--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "5.6.*",
         "laravel/socialite": "^3.2",
         "laravel/tinker": "^1.0",
-        "mews/captcha": "^2.2"
+        "mews/captcha": "^2.2",
+        "zizaco/entrust": "dev-master"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
